<resources>
    <string name="app_name">THU Excursion App</string>
    <string name="excursion_management">Excursion Management</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="try_scan_me">Click me to scan your student card!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bg_vector_blue">background vector blue</string>
    <string name="sign_in">sign in</string>
    <string name="scan_login">Scan_login</string>
    <string name="txt_message">Scan</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="available_excursions">Available Excursions</string>
</resources>