<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_weight="4"
            android:src="@drawable/ic_login_3"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/bg_vector_blue" />
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/excursion_management"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="5dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="10dp"
            android:hint="@string/email"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/password"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="5dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sign_in"
            android:textColor="#fff" />
        <TextView
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/try_scan_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--<div>Icons made by <a href="" title="toempong">toempong</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
        <ImageButton
            android:id="@+id/scanLogin"
            android:background="@drawable/mobile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/scan_login" />
    </LinearLayout>
</RelativeLayout>